--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,6 @@
 	},
 	"browser_action": {
 		"default_icon": "icon16.png",
-		"default_popup": "popup.html",
 		"default_title": "My first chrome extension"
 	},
 	"options_page": "./options.html",
@@ -20,8 +19,14 @@
 	"content_scripts": [
 		{
 			"matches": ["https://twitter.com/*"],
-			"js": ["contentCopy.js", "content1.js"]
+			"js": ["contentCopy.js", "content1.js", "popup.js"]
 		}
 	],
-	"permissions": ["tabs", "https://www.google.com/"]
+	"permissions": [
+		"tabs",
+		"contextMenus",
+		"cookies",
+		"http://*/*",
+		"https://*/*"
+	]
 }
