--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
 	},
 	"browser_action": {
 		"default_icon": "icon16.png",
-		"default_title": "Saved tweets CRM"
+		"default_title": "Saved tweets CRM",
+		"default_popup": "popup.html"
 	},
 	"options_page": "./options.html",
 	"background": {
