--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
-	"name": "Bookmark Tweets",
-	"description": "Saved tweets CRM",
+	"name": "Krome tweet save",
+	"description": "Want to revisit a tweet use Krome to save it.",
 	"version": "1.0.0",
 	"icons": {
 		"16": "./icon16.png",
@@ -10,7 +10,7 @@
 	},
 	"browser_action": {
 		"default_icon": "icon16.png",
-		"default_title": "Saved tweets CRM",
+		"default_title": "Save to Krome",
 		"default_popup": "popup.html"
 	},
 	"options_page": "./options.html",
