--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
 	"content_scripts": [
 		{
 			"matches": ["https://twitter.com/*"],
-			"js": ["contentCopy.js", "content1.js", "popup.js"]
+			"js": ["contentCopy.js", "popup.js"]
 		}
 	],
 	"permissions": [
