--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
 	"content_scripts": [
 		{
 			"matches": ["https://twitter.com/*"],
-			"js": ["contentCopy.js", "popup.js"]
+			"js": ["content.js", "popup.js"]
 		}
 	],
 	"permissions": [
