--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "tweetflick",
-	"description": "Want to revisit a tweet use tweetflick to save it.",
+	"description": "Organize and save your tweets like pro. Get the most out of your twitter - Tweetflick.",
 	"version": "1.0.0",
 	"icons": {
 		"16": "./icon16.png",
