--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,5 @@
 			"js": ["content.js", "popup.js"]
 		}
 	],
-	"permissions": ["tabs", "cookies", "http://*/*", "https://*/*"]
+	"permissions": ["tabs", "cookies", "https://*/*"]
 }
